Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22084

Squared brackets missing from JSON_ARRAYAGG when used in a view

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.5.1, 10.5(EOL)
    • 10.5.4
    • JSON
    • None
    • Win 10

    Description

      When JSON_ARRAYAGG is used in a view, querying that view results in missing [ and ] brackets.

      create or replace view dummy as (
       
        select  json_arrayagg(json_object(
                 "type", "permPeriod",
                 "id", ID
               )) as JSON_DATA
        
        from TEST
       
        group by COL1
      )
       
      select * from dummy 
      

      gives:

      {"type": "permPeriod", "id": 7},{"type": "permPeriod", "id": 8}
      

      instead of:

      [{"type": "permPeriod", "id": 7},{"type": "permPeriod", "id": 8}]
      

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              fathert Tim Fathers
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.