MDEV-22084 Squared brackets missing from JSON_ARRAYAGG when used in a view.

Item_func_groupconcat::print() should be fixed to work for the derived
classes.